// Copyright 2023 Intrinsic Innovation LLC
// Intrinsic Proprietary and Confidential
// Provided subject to written agreement between the parties.

syntax = "proto3";

package intrinsic_proto.icon;

// Tuple of module and interface name to uniquely address a hardware interface.
message HardwareInterface {
  // Name of the module.
  string module_name = 1;
  // Name of the interface.
  string interface_name = 2;
}
